# emergency-backpack

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: algorithms.rs  backpack.rs  cli.rs  knapsack.rs  lib.rs  main.rs  matrix.rs  table.rs  ui.rs
